Started to construct application form copnonent as well as models to represent the previous education and job experience of individual users.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "body-parser": "^1.17.2",
     "crypto": "0.0.3",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
