--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "connect-session-sequelize": "^4.1.0",
     "crypto": "0.0.3",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
@@ -16,6 +17,7 @@
     "net": "^1.0.2",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
+    "passport-linkedin-oauth2": "^1.5.0",
     "path": "^0.12.7",
     "pg": "^6.4.0",
     "pg-hstore": "^2.3.2",
