Loads of new stuff

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "scripts": {
     "start":"node /server/index.js",
+    "test": "mocha --watch ./tests/*.spec.js --compilers js:babel-register",
     "start-dev": "webpack -w & nodemon ./server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
