--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
     "body-parser": "^1.17.2",
     "connect-session-sequelize": "^4.1.0",
     "crypto": "0.0.3",
@@ -56,11 +60,10 @@
     "webpack": "^3.0.0"
   },
   "scripts": {
-    "start":"node /server/index.js",
-    "test": "mocha --watch ./tests/*.spec.js --compilers js:babel-register",
+    "start": "node /server/index.js",
+    "test": "react-scripts test --env=jsdom",
     "start-dev": "webpack -w & nodemon ./server/index.js",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "postinstall": "webpack"
   }
