--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "babel": "^6.23.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
     "body-parser": "^1.17.2",
     "connect-session-sequelize": "^4.1.0",
     "crypto": "0.0.3",
@@ -34,6 +39,7 @@
     "webpack": "^3.0.0"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
@@ -56,12 +62,8 @@
     "webpack": "^3.0.0"
   },
   "scripts": {
-    "start":"node /server/index.js",
-    "test": "mocha --watch ./tests/*.spec.js --compilers js:babel-register",
-    "start-dev": "webpack -w & nodemon ./server/index.js",
-    "build": "react-scripts build",
+    "start": "node ./server/index.js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "postinstall": "webpack"
+    "start-dev": "webpack -w & NODE_ENV='development' nodemon ./server/index.js"
   }
 }
